# scrapper

./: .gitignore  CAPABILITIES.md  INSTALL_AND_USE.md  README.md  RELEASE_CHECKLIST.md  advanced-scraper-app.sh  advanced-scraper.desktop  install-local.sh  pyproject.toml  release-desktop.yml  start-advanced-scraper.sh
advanced_scraper/: __init__.py  archive.py  assets.py  browser.py  cli.py  crawler.py  extract.py  manage.py  monitoring.py  output.py  privacy.py  product.py  robots.py  rules.py  schema.py  selectors.py  sitemap.py  storage.py  webhook.py
advanced_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
code-previewer/: README.md  docker-compose.yml
code-previewer/backend/: package-lock.json  package.json  server.js
code-previewer/frontend/: Dockerfile  package.json
code-previewer/frontend/public/: index.html
code-previewer/frontend/src/: App.js
desktop/: README.md  backend_entry.py  build-backend.sh  main.js  package-lock.json  package.json
desktop/backend-build/advanced-scraper-backend/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  warn-advanced-scraper-backend.txt  xref-advanced-scraper-backend.html
desktop/backend-spec/: advanced-scraper-backend.spec
